--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ionic-angular": "2.0.0-beta.8",
     "ionic-native": "1.2.4",
     "ionicons": "3.0.0",
+    "node-uuid": "^1.4.7",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12"
