--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "ionic-gulp-scripts-copy": "^2.0.0",
     "run-sequence": "1.1.5"
   },
-  "name": "cheguei",
+  "name": "Cheguei!",
   "description": "Cheguei! Aplicativo de Reembolso de despesas",
   "cordovaPlugins": [
     "cordova-plugin-device",
