--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
   "name": "Cheguei!",
   "description": "Cheguei! Aplicativo de Reembolso de despesas",
   "cordovaPlugins": [
-    "cordova-plugin-device",
-    "cordova-plugin-console",
-    "cordova-plugin-whitelist",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-device@~1.1.2",
+    "cordova-plugin-console@~1.0.3",
+    "cordova-plugin-whitelist@~1.2.2",
+    "cordova-plugin-splashscreen@~3.2.2",
+    "cordova-plugin-statusbar@~2.1.3",
+    "ionic-plugin-keyboard@~2.2.0",
+    "cordova-plugin-geolocation@~2.2.0",
+    "cordova-plugin-camera",
+    "de.appplant.cordova.plugin.local-notification"
   ],
   "cordovaPlatforms": []
 }
