--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@angular/platform-browser": "^2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.1",
     "@angular/router": "^2.0.0-rc.1",
-    "dateformat": "^1.0.12",
     "es6-shim": "^0.35.0",
     "ionic-angular": "2.0.0-beta.8",
     "ionic-native": "1.2.4",
     "ionicons": "3.0.0",
+    "moment": "^2.13.0",
     "node-uuid": "^1.4.7",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
